# tracklists-rust-axum-askama

./: .env  .gitignore  Cargo.toml  README.md  tailwind.config.js  tracklists.db  tracklists.db-shm  tracklists.db-wal
.cargo/: config.toml
migrations/: 20240131015820_create_tracklists_table.sql
src/: config.rs  ctx.rs  db.rs  error.rs  log.rs  main.rs  model.rs  routes.rs  web.rs
src/model/: artists.rs  error.rs  songs.rs
src/model/store/: db.rs  error.rs
src/routes/: about.rs  contact.rs  tracklists.rs
src/routes/tracklists/: artists.rs  docs.rs  mix_series.rs  songs.rs
src/web/: api.rs  login.rs  routes.rs
src/web/api/: login.rs
src/web/middleware/: auth.rs
src/web/routes/: about.rs  home.rs  not_found.rs  tracklists.rs
src/web/routes/tracklists/: artists.rs  docs.rs  mix_series.rs  overview.rs  songs.rs
templates/: base.html  footer.html  header.html  home.html  index.html  not_found.html
templates/components/: footer.html  header.html
templates/routes/: about.html  contact.html  tracklists.html
templates/routes/login/: login.html  login_fail.html  login_success.html
templates/routes/tracklists/: artist.html  artist_detail.html  artists.html  docs.html  mix-series.html  overview.html  sidenav.html  songs.html
templates/routes/tracklists/artists/: artist.html  artist_card.html  artists.html  create_artist.html
templates/routes/tracklists/songs/: create_song.html  song.html  song_card.html  song_detail.html  songs.html
tests/: quick_dev.rs
