[package]
name = "tracklists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
askama = { version = "0.12", default-features = false, features = [
  "with-axum",
  "mime",
  "mime_guess",
] }
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
askama_axum = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "any",
  "sqlite",
  "uuid",
] }
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
httpc-test = "0.1.9"

[features]
default = ["askama/default"]
config = ["askama/config"]
humansize = ["askama/humansize"]
markdown = ["askama/markdown"]
num-traits = ["askama/num-traits"]
serde-json = ["askama/serde-json"]
serde-yaml = ["askama/serde-yaml"]
urlencode = ["askama/urlencode"]
